# verite

./: .gitignore  stack.yaml  verite.cabal
src/: Cinema21.hs  Laurelhurst.hs  Lib.hs  LivingRoom.hs  Parser.hs  Types.hs
