cabal-version: 2.4
name: verite
version: 0.1.0.0

synopsis: Showtime aggregator for my preferred theaters.
description: Showtime aggregator for my preferred theaters.
license: MIT
author:  dan pittman
maintainer: dan@dpitt.me
copyright: dan pittman
category: Web

library
    exposed-modules:
        Cinema21,
        Laurelhurst,
        LivingRoom,
        Types
    build-depends:
        base ^>=4.17.2.0,
        parselet,
        text
    hs-source-dirs: src
    default-language: Haskell2010

executable verite
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.0,
        parselet,
        req,
        text,
        time,
        verite
    hs-source-dirs: bin
    default-language: Haskell2010
